--- a/blogpost.html
+++ b/blogpost.html
@@ -19,7 +19,7 @@
                     las cosas increibles que se
                     pueden hacer con ramas
                 </p>
-                <p><imgc src="https://www.google.com.mx/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=2ahUKEwj45fjwx7XjAhWPqp4KHam9Cf4QjRx6BAgBEAQ&url=https%3A%2F%2Fwww.google.com%2Fimghp%3Fhl%3Den&psig=AOvVaw3cIKbjjc2vuhwD9xIAdCFi&ust=1563233269561756" /></imgc></p>
+                <p><imgc src="https://steamuserimages-a.akamaihd.net/ugc/922541006440575185/25EBBFBD6D71F6A2C146D7C2E37EB7FC919184D5/" /></imgc></p>
                 <p>Los blogs son la mejor
                     forma de compartir 
                     infomacion y tus ideas.
